--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "swr": "^1.3.0"
   },
   "devDependencies": {
